# editor-git

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: cmake.yml  wx-requirements.txt
libs/: CMakeLists.txt
libs/editor-version/: CMakeLists.txt  Operations.md  Repository.cpp  editor-version.cpp
libs/editor-version/include/editor-version/: Repository.h  editor-version.h
libs/gitpp/: Blob.cpp  CMakeLists.txt  Commit.cpp  Config.cpp  Diff.cpp  Index.cpp  Object.cpp  Oid.cpp  Repository.cpp  RevisionWalker.cpp  Signature.cpp  Tree.cpp  TreeEntry.cpp
libs/gitpp/include/gitpp/: Blob.h  Commit.h  Config.h  Diff.h  Git.h  Index.h  Object.h  Oid.h  Repository.h  RevisionWalker.h  Signature.h  Tree.h  TreeEntry.h
tests/: CMakeLists.txt
tests/test-editor-version/: CMakeLists.txt  Repository_test.cpp  test.cpp  test_data.h.in
tests/test-gitpp/: CMakeLists.txt  Repository_test.cpp  test_data.h.in
tools/editor/: CMakeLists.txt  main.cpp
